--- a/21_Elixir_Novakovic_Antic_Lazarevic_Ninkovic.tex
+++ b/21_Elixir_Novakovic_Antic_Lazarevic_Ninkovic.tex
@@ -22,7 +22,7 @@
 \definecolor{mygray}{rgb}{0.5,0.5,0.5}
 \definecolor{mymauve}{rgb}{0.58,0,0.82}
 
-\lstset{ 
+\lstset{
   backgroundcolor=\color{white},   % choose the background color; you must add \usepackage{color} or \usepackage{xcolor}; should come as last argument
   basicstyle=\scriptsize\ttfamily,        % the size of the fonts that are used for the code
   breakatwhitespace=false,         % sets if automatic breaks should only happen at whitespace
@@ -71,29 +71,31 @@ U ovom tekstu je ukratko prikazana osnovna forma seminarskog rada. Obratite paž
 \section{Uvod}
 \label{sec:uvod}
 
-Kada budete predavali seminarski rad, imenujete datoteke tako da sadrže redni broj teme, temu seminarskog rada, kao i prezimena članova grupe. Precizna uputstva na temu imenovnja će biti data na formi za predaju seminarskog rada. Predaja seminarskih radova biće isključivo preko veb forme, a NE slanjem mejla. Link na formu će biti dat u okviru obaveštenja na strani kursa. Vodite računa da prilikom predavanja seminarskog rada predate samo one fajlove koji su neophodni za ponovno generisanje pdf datoteke. To znači da pomoćne fajlove, kao što su .log, .out, .blg, .toc, .aux i slično, \textbf{ne treba predavati}.
+Elixir(Eliksir) je programski jezik koji se prvi put pojavljuje u javnosti 2012. godine kao projekat kompanije Plataformatec. Ovaj funkcionalni, dinamičan programski jezik*(footnote: Diskusija o specificnoj paradigmi u daljem tekstu) se pokreće na Erlang vituelnoj mašini pa samim tim i deli pogodna svojstva kao što su konkurentnost i tolerisanje grešaka, koje dolaze sa ovim okruženjem. Njegov tvorac, Jose Valim, navodi da je motivacija za pravljenje ovog jezika upravo bila ljubav prema ovoj virtualnoj mašini i ekosistemu, ali i njeni nedostaci. Iz tačke gledišta olakšavanja svakodnevnog razvoja sofvera, koncepti poput metaprogramiranje - tehnika kojom programi imaju mogućnost da druge programe posmatraju kao svoje podatke i na taj način čitaju pa čak i modifikuju njihov, a samim tim i svoj kod u vreme izvršavanja, zatim polimorfizam (pretp. da čitaoc zna, pitati prof.) i makroi kao i podrška za alate, bili su neke od nepostojećih karakteristika ovog sistema koje bi Elixir trebalo da nadomesti.
+(možda još o konkurentnosti, garbage collection, funkc. OTP)
+% Kada budete predavali seminarski rad, imenujete datoteke tako da sadrže redni broj teme, temu seminarskog rada, kao i prezimena članova grupe. Precizna uputstva na temu imenovnja će biti data na formi za predaju seminarskog rada. Predaja seminarskih radova biće isključivo preko veb forme, a NE slanjem mejla. Link na formu će biti dat u okviru obaveštenja na strani kursa. Vodite računa da prilikom predavanja seminarskog rada predate samo one fajlove koji su neophodni za ponovno generisanje pdf datoteke. To znači da pomoćne fajlove, kao što su .log, .out, .blg, .toc, .aux i slično, \textbf{ne treba predavati}.
 
 \section{Osnovna uputstva}
-Vaš seminarski rad mora da sadrži najmanje jednu \textbf{sliku}, najmanje jednu \textbf{tabelu} i najmanje \textbf{sedam referenci} u spisku literature. Najmanje jedna slika treba da bude originalna i da predstavlja neke podatke koje ste Vi osmislili da treba da prezentujete u svom radu. Isto važi i za najmanje jednu tabelu. 	Od referenci, neophodno je imati bar jednu \textbf{knjigu}, bar jedan \textbf{naučni članak} iz odgovarajućeg časopisa i bar jednu adekvatnu \textbf{veb adresu}. 
+Vaš seminarski rad mora da sadrži najmanje jednu \textbf{sliku}, najmanje jednu \textbf{tabelu} i najmanje \textbf{sedam referenci} u spisku literature. Najmanje jedna slika treba da bude originalna i da predstavlja neke podatke koje ste Vi osmislili da treba da prezentujete u svom radu. Isto važi i za najmanje jednu tabelu. 	Od referenci, neophodno je imati bar jednu \textbf{knjigu}, bar jedan \textbf{naučni članak} iz odgovarajućeg časopisa i bar jednu adekvatnu \textbf{veb adresu}.
 
-\textbf{Dužina seminarskog rada treba da bude od 10 do 12 strana.} Svako prekoračenje ili potkoračenje biće kažnjeno sa odgovarajućim brojem poena. Eventualno, nakon strane 12, može se javiti samo tekst poglavlja \textbf{Dodatak} koji sadrži nekakav dodatni k\^{o}d, ali je svakako potrebno da rad može da se pročita i razume i bez čitanja tog dodatka. 
+\textbf{Dužina seminarskog rada treba da bude od 10 do 12 strana.} Svako prekoračenje ili potkoračenje biće kažnjeno sa odgovarajućim brojem poena. Eventualno, nakon strane 12, može se javiti samo tekst poglavlja \textbf{Dodatak} koji sadrži nekakav dodatni k\^{o}d, ali je svakako potrebno da rad može da se pročita i razume i bez čitanja tog dodatka.
 
-Ко жели, може да пише рад ћирилицом. У том случају, неопходно је да су инсталирани одговарајући пакети: texlive-fonts-extra, texlive-latex-extra, texlive-lang-cyrillic, texlive-lang-other. 
+Ко жели, може да пише рад ћирилицом. У том случају, неопходно је да су инсталирани одговарајући пакети: texlive-fonts-extra, texlive-latex-extra, texlive-lang-cyrillic, texlive-lang-other.
 
 Nemojte koristiti stari način pisanja slova, tj ovo:
 \begin{verbatim}
 \v{s} i \v{c} i \'c ...
 \end{verbatim}
-Koristite direknto naša slova:	
+Koristite direknto naša slova:
 \begin{verbatim}
-š i č i ć ... 
+š i č i ć ...
 \end{verbatim}
 
 
-\section{Engleski termini i citiranje}	
+\section{Engleski termini i citiranje}
 \label{sec:termini_i_citiranje}
 
-Na svakom mestu u tekstu naglasiti odakle tačno potiču informacije. Uz sve novouvedene termine u zagradi naglasiti od koje engleske reči termin potiče. 
+Na svakom mestu u tekstu naglasiti odakle tačno potiču informacije. Uz sve novouvedene termine u zagradi naglasiti od koje engleske reči termin potiče.
 
 Naredni primeri ilustruju način uvođenja enlegskih termina kao i citiranje.
 
@@ -106,18 +108,18 @@ Za prevođenje programa napisanih u programskom jeziku C može se koristiti GCC 
 \end{primer}
 
 \begin{primer}
- Da bi se ispitivala ispravost softvera, najpre je potrebno precizno definisati njegovo ponašanje \cite{laski2009software}. 
+ Da bi se ispitivala ispravost softvera, najpre je potrebno precizno definisati njegovo ponašanje \cite{laski2009software}.
 \end{primer}
 
 Reference koje se koriste u ovom tekstu zadate su u datoteci {\em seminarski.bib}. Prevođenje u pdf format u Linux okruženju može se uraditi na sledeći način:
 \begin{verbatim}
-pdflatex TemaImePrezime.tex 
-bibtex TemaImePrezime.aux 
-pdflatex TemaImePrezime.tex 
-pdflatex TemaImePrezime.tex 
+pdflatex TemaImePrezime.tex
+bibtex TemaImePrezime.aux
+pdflatex TemaImePrezime.tex
+pdflatex TemaImePrezime.tex
 \end{verbatim}
-Prvo latexovanje je neophodno da bi se generisao {\em .aux} fajl. {\em bibtex} proizvodi odgovarajući {\em .bbl} fajl koji se koristi za generisanje literature. 
-Potrebna su dva prolaza (dva puta pdflatex) da bi se reference ubacile u tekst (tj da ne bi ostali znakovi pitanja umesto referenci). Dodavanjem novih referenci potrebno je ponoviti ceo postupak.  
+Prvo latexovanje je neophodno da bi se generisao {\em .aux} fajl. {\em bibtex} proizvodi odgovarajući {\em .bbl} fajl koji se koristi za generisanje literature.
+Potrebna su dva prolaza (dva puta pdflatex) da bi se reference ubacile u tekst (tj da ne bi ostali znakovi pitanja umesto referenci). Dodavanjem novih referenci potrebno je ponoviti ceo postupak.
 
 
 
@@ -129,7 +131,7 @@ Potrebna su dva prolaza (dva puta pdflatex) da bi se reference ubacile u tekst (
 
 
 
-Broj naslova i podnaslova je proizvoljan. Neophodni su samo Uvod i Zaključak. Na poglavlja unutar teksta referisati se po potrebi. 
+Broj naslova i podnaslova je proizvoljan. Neophodni su samo Uvod i Zaključak. Na poglavlja unutar teksta referisati se po potrebi.
 \begin{primer}
 U odeljku \ref{sec:naslov1} precizirani su osnovni pojmovi, dok su zaključci dati u odeljku \ref{sec:zakljucak}.
 \end{primer}
@@ -140,7 +142,7 @@ Još jednom da napomenem da nema razloga da pišete:
 \end{verbatim}
 Možete koristiti srpska slova
 \begin{verbatim}
-š i č i ć ... 
+š i č i ć ...
 \end{verbatim}
 
 
@@ -148,9 +150,9 @@ Možete koristiti srpska slova
 \section{Slike i tabele}
 \label{slike_i_tabele}
 
-Slike i tabele treba da budu u svom okruženju, sa odgovarajućim naslovima, obeležene labelom da koje omogućava referenciranje. 
+Slike i tabele treba da budu u svom okruženju, sa odgovarajućim naslovima, obeležene labelom da koje omogućava referenciranje.
 
-\begin{primer} Ovako se ubacuje slika. Obratiti pažnju da je dodato i 
+\begin{primer} Ovako se ubacuje slika. Obratiti pažnju da je dodato i
 \begin{verbatim}
 \usepackage{graphicx}
 \end{verbatim}
@@ -163,7 +165,7 @@ Slike i tabele treba da budu u svom okruženju, sa odgovarajućim naslovima, obe
 \label{fig:pande}
 \end{figure}
 
-Na svaku sliku neophodno je referisati se negde u tekstu. Na primer, na slici \ref{fig:pande} prikazane su pande. 
+Na svaku sliku neophodno je referisati se negde u tekstu. Na primer, na slici \ref{fig:pande} prikazane su pande.
 \end{primer}
 
 \begin{primer} I tabele treba da budu u svom okruženju, i na njih je neophodno referisati se u tekstu. Na primer, u tabeli \ref{tab:tabela1} su prikazana različita poravnanja u tabelama.
@@ -204,96 +206,96 @@ except ValueError:
 \label{sec:naslov1}
 
 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
 
 
 \subsection{Prvi podnaslov}
 \label{subsec:podnaslov1}
 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
 
 \subsection{Drugi podnaslov}
 \label{subsec:podnaslov2}
 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
 
 
 \subsection{... podnaslov}
 \label{subsec:podnaslovN}
 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
 
 \section{n-ti naslov}
 \label{sec:naslovN}
 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
 
 \subsection{... podnaslov}
 \label{subsec:podnaslovK}
 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
 
 \subsection{... podnaslov}
 \label{subsec:podnaslovM}
 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
-Ovde pišem tekst. 
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
+Ovde pišem tekst.
 
 
 \section{Zaključak}
 \label{sec:zakljucak}
 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
-Ovde pišem zaključak. 
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
+Ovde pišem zaključak.
 
 
 \addcontentsline{toc}{section}{Literatura}
 \appendix
-\bibliography{seminarski} 
+\bibliography{seminarski}
 \bibliographystyle{plain}
 
 \appendix
